--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             --border: #ccc;
         }
 
-        /* Estilização Global da Barra de Rolagem */
         *::-webkit-scrollbar {width: 4px; height: 4px;}
         *::-webkit-scrollbar-thumb {background: var(--accent); border-radius: 10px;}
         *::-webkit-scrollbar-track {background: #1a1a1a;}
@@ -33,7 +32,7 @@
             color: var(--text);
             font-family: Arial, sans-serif;
             margin: 0;
-            padding-bottom: 80px; /* Espaço para o footer fixo */
+            padding-bottom: 80px;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -81,7 +80,6 @@
             margin: 12px 0 5px 0; font-weight: bold; border-left: 2px solid var(--accent); padding-left: 5px; 
         }
 
-        /* Card ajustado para fundo preto/escuro igual ao Summonboss */
         .item { 
             padding: 12px; background: var(--card-bg); border: 1px solid var(--border);
             border-left: 5px solid #333; margin-bottom: 12px; border-radius: 4px;
@@ -98,15 +96,11 @@
         .item-alert { border-left-color: #ff3d00!important; background: rgba(255,61,0,0.05); }
         .alert-active { color: #ff3d00!important; font-weight: bold; text-decoration: underline; animation: blink 1s infinite; }
         
-        @keyframes blink { 50% { opacity: .5; } }
-        
-        /* Cores das Bordas Laterais por Level */
         .L141 { border-left-color: #4caf50; } 
         .L143 { border-left-color: #2196f3; }
         .L150 { border-left-color: #9c27b0; } 
         .L155 { border-left-color: #f44336; }
 
-        /* Footer Fixo */
         .footer { 
             position: fixed; bottom: 0; width: 100%; padding: 12px;
             background: #111; border-top: 1px solid #222;
@@ -208,7 +202,6 @@
         localStorage.setItem('mir4_theme', isLight ? 'light' : 'dark');
     }
 
-    // Carrega o tema salvo para manter sincronia entre páginas
     function loadTheme() {
         const savedTheme = localStorage.getItem('mir4_theme');
         if (savedTheme === 'light') {
