--- a/Summonboss.html
+++ b/Summonboss.html
@@ -71,7 +71,7 @@
         }
         .btn-reset { background: #900; color: #fff; border: none; padding: 5px 12px; border-radius: 3px; cursor: pointer; font-size: 10px; }
 
-        .main-content { display: flex; justify-content: center; gap: 20px; padding: 20px; }
+        .main-content { display: flex; flex-direction: row; justify-content: center; gap: 20px; padding: 20px; flex-wrap: wrap; }
 
         .boss-list {
             display: grid;
@@ -80,68 +80,42 @@
             align-content: start;
         }
 
-        .boss-item {
-            width: 320px;
-            height: 82px;
-            position: relative;
+        @media (max-width: 1080px) {
+            .boss-list { grid-template-columns: 320px; }
+            .side-panel { position: relative !important; top: 0 !important; width: 320px !important; }
         }
+
+        .boss-item { width: 320px; height: 82px; position: relative; }
 
         .boss-card {
-            width: 100%;
-            background: var(--card-bg);
-            border: 1px solid var(--border);
-            border-left: 5px solid #333;
-            border-radius: 4px;
-            cursor: pointer;
-            position: absolute;
-            top: 0; left: 0;
-            z-index: 10;
-            overflow: hidden;
-            transition: max-height 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
-            max-height: 80px;
+            width: 100%; background: var(--card-bg); border: 1px solid var(--border);
+            border-left: 5px solid #333; border-radius: 4px; cursor: pointer;
+            position: absolute; top: 0; left: 0; z-index: 10;
+            overflow: hidden; transition: max-height 0.3s ease; max-height: 80px;
         }
 
-        .boss-card:hover:not(.expanded) {
-            border-left-color: var(--accent);
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.5);
-            background: #181818;
-        }
-
-        .boss-card.expanded {
-            z-index: 100;
-            max-height: 500px;
-            border-color: var(--accent);
-            border-left-color: var(--accent);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.8);
-        }
-
+        .boss-card.expanded { z-index: 100; max-height: 500px; border-color: var(--accent); border-left-color: var(--accent); }
         .boss-card.done { opacity: 0.3; filter: grayscale(1); }
 
         .check-done {
             position: absolute; top: 10px; right: 10px;
-            width: 20px; height: 20px; border: 1px solid #444;
-            background: #000; z-index: 110;
+            width: 20px; height: 20px; border: 1px solid #444; background: #000; z-index: 110;
         }
         .done .check-done { background: var(--accent); }
-        .done .check-done::after { content: '✓'; color: #000; display: block; text-align: center; font-size: 14px; font-weight: bold; line-height: 18px; }
+        .done .check-done::after { content: '✓'; color: #000; display: block; text-align: center; font-size: 14px; font-weight: bold; }
 
         .boss-header { padding: 12px; display: flex; align-items: center; gap: 10px; }
         .boss-img { width: 52px; height: 52px; border: 1px solid #222; object-fit: cover; }
         .boss-name { font-weight: bold; font-size: 12px; color: #fff; display: block; }
         .local-info { font-size: 10px; color: var(--accent); margin-top: 3px; }
 
-        .items-container {
-            display: none; padding: 10px; background: #080808;
-            border-top: 1px solid #222; flex-wrap: wrap; gap: 8px;
-        }
+        .items-container { display: none; padding: 10px; background: #080808; border-top: 1px solid #222; flex-wrap: wrap; gap: 8px; }
         .expanded .items-container { display: flex; }
         .item-img { width: 38px; height: 38px; border: 1px solid #333; border-radius: 2px; }
 
         .side-panel {
-            width: 400px; background: #111;
-            border: 1px solid #222; position: sticky; top: 20px;
-            height: fit-content; border-radius: 4px; overflow: hidden;
+            width: 400px; background: #111; border: 1px solid #222;
+            position: sticky; top: 20px; height: fit-content; border-radius: 4px; overflow: hidden;
         }
         .panel-header { padding: 15px; border-bottom: 1px solid #222; background: #151515; }
         .map-container { width: 100%; min-height: 380px; background: #000; display: flex; align-items: center; justify-content: center; }
@@ -269,10 +243,8 @@
         function handleCardClick(id) {
             const card = document.getElementById(id);
             const boss = bosses.find(x => x.id === id);
-            
             const isExpanded = card.classList.contains('expanded');
             document.querySelectorAll('.boss-card').forEach(c => c.classList.remove('expanded'));
-
             if(!isExpanded) {
                 card.classList.add('expanded');
                 document.getElementById('p-name').innerText = boss.n;
@@ -283,27 +255,18 @@
 
         function filter() {
             const q = document.getElementById('search').value.toLowerCase();
-            let count = 0;
             document.querySelectorAll('.boss-item').forEach(item => {
-                const name = item.querySelector('.boss-name').innerText.toLowerCase();
-                const loc = item.querySelector('.local-info').innerText.toLowerCase();
-                const match = name.includes(q) || loc.includes(q);
+                const match = item.querySelector('.boss-name').innerText.toLowerCase().includes(q);
                 item.style.display = match ? 'block' : 'none';
-                if(match) count++;
             });
-            document.getElementById('count').innerText = `Total: ${count}`;
         }
 
         function setMap(map, btn) {
             document.querySelectorAll('.f-btn').forEach(b => b.classList.remove('active'));
             btn.classList.add('active');
-            let count = 0;
             document.querySelectorAll('.boss-item').forEach(item => {
-                const match = map === 'all' || item.dataset.map === map;
-                item.style.display = match ? 'block' : 'none';
-                if(match) count++;
+                item.style.display = (map === 'all' || item.dataset.map === map) ? 'block' : 'none';
             });
-            document.getElementById('count').innerText = `Total: ${count}`;
         }
 
         function toggleDone(e, id) {
@@ -336,10 +299,23 @@
             const body = document.body;
             const btn = document.getElementById('themeBtn');
             body.classList.toggle('light-mode');
-            btn.innerText = body.classList.contains('light-mode') ? "MODO ESCURO" : "MODO CLARO";
+            const isLight = body.classList.contains('light-mode');
+            btn.innerText = isLight ? "MODO ESCURO" : "MODO CLARO";
+            localStorage.setItem('mir4_theme', isLight ? 'light' : 'dark');
         }
 
-        window.onload = render;
+        function loadTheme() {
+            const savedTheme = localStorage.getItem('mir4_theme');
+            if (savedTheme === 'light') {
+                document.body.classList.add('light-mode');
+                document.getElementById('themeBtn').innerText = "MODO ESCURO";
+            }
+        }
+
+        window.onload = function() {
+            render();
+            loadTheme();
+        };
     </script>
 </body>
 </html>
