--- a/Summonboss.html
+++ b/Summonboss.html
@@ -5,39 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIR4 Boss Tracker - Invocação</title>
     <style>
-        :root {
-            --bg: #000;
-            --card-bg: #111;
-            --text: #ddd;
-            --accent: #ff9800;
-            --border: #222;
-        }
-
-        .light-mode {
-            --bg: #f0f0f0;
-            --card-bg: #fff;
-            --text: #222;
-            --accent: #e68a00;
-            --border: #ccc;
-        }
+        *::-webkit-scrollbar {width: 4px; height: 4px;}
+        *::-webkit-scrollbar-thumb {background: #ff9800; border-radius: 10px;}
+        *::-webkit-scrollbar-track {background: #1a1a1a;}
 
         body {
-            background: var(--bg);
-            color: var(--text);
+            background: #000;
+            color: #ddd;
             font-family: Arial, sans-serif;
             margin: 0;
             padding-bottom: 80px;
         }
 
-        .theme-toggle {
-            position: absolute; top: 15px; right: 20px; z-index: 2000;
-            padding: 8px 12px; border-radius: 4px; border: 1px solid var(--accent);
-            background: transparent; color: var(--accent); cursor: pointer;
-            font-size: 10px; font-weight: bold;
-        }
-
         .main-header {
-            background: #111; padding: 20px; text-align: center; border-bottom: 2px solid var(--accent);
+            background: #111; padding: 20px; text-align: center; border-bottom: 2px solid #ff9800;
         }
 
         .controls-area {
@@ -53,8 +34,9 @@
         .nav-btn {
             width: 140px; text-align: center; font-size: 11px; font-weight: bold;
             padding: 10px; border-radius: 4px; cursor: pointer; border: none; text-decoration: none;
+            transition: 0.3s;
         }
-        .btn-active { background: var(--accent); color: #000; }
+        .btn-active { background: #ff9800; color: #000; }
         .btn-inactive { background: #222; color: #888; }
 
         .filter-container { display: flex; flex-wrap: wrap; gap: 5px; justify-content: center; }
@@ -62,7 +44,7 @@
             padding: 5px 10px; border: 1px solid #333; font-size: 10px;
             cursor: pointer; background: #111; color: #fff;
         }
-        .f-btn.active { background: var(--accent); color: #000; }
+        .f-btn.active { background: #ff9800; color: #000; }
 
         .info-bar {
             width: 100%; max-width: 652px; padding: 10px;
@@ -88,26 +70,26 @@
         .boss-item { width: 320px; height: 82px; position: relative; }
 
         .boss-card {
-            width: 100%; background: var(--card-bg); border: 1px solid var(--border);
+            width: 100%; background: #111; border: 1px solid #222;
             border-left: 5px solid #333; border-radius: 4px; cursor: pointer;
             position: absolute; top: 0; left: 0; z-index: 10;
             overflow: hidden; transition: max-height 0.3s ease; max-height: 80px;
         }
 
-        .boss-card.expanded { z-index: 100; max-height: 500px; border-color: var(--accent); border-left-color: var(--accent); }
+        .boss-card.expanded { z-index: 100; max-height: 500px; border-color: #ff9800; border-left-color: #ff9800; }
         .boss-card.done { opacity: 0.3; filter: grayscale(1); }
 
         .check-done {
             position: absolute; top: 10px; right: 10px;
             width: 20px; height: 20px; border: 1px solid #444; background: #000; z-index: 110;
         }
-        .done .check-done { background: var(--accent); }
+        .done .check-done { background: #ff9800; }
         .done .check-done::after { content: '✓'; color: #000; display: block; text-align: center; font-size: 14px; font-weight: bold; }
 
         .boss-header { padding: 12px; display: flex; align-items: center; gap: 10px; }
         .boss-img { width: 52px; height: 52px; border: 1px solid #222; object-fit: cover; }
         .boss-name { font-weight: bold; font-size: 12px; color: #fff; display: block; }
-        .local-info { font-size: 10px; color: var(--accent); margin-top: 3px; }
+        .local-info { font-size: 10px; color: #ff9800; margin-top: 3px; }
 
         .items-container { display: none; padding: 10px; background: #080808; border-top: 1px solid #222; flex-wrap: wrap; gap: 8px; }
         .expanded .items-container { display: flex; }
@@ -128,12 +110,10 @@
         }
     </style>
 </head>
-<body class="dark-mode">
-
-    <button class="theme-toggle" id="themeBtn" onclick="toggleTheme()">MODO CLARO</button>
+<body>
 
     <header class="main-header">
-        <h1 style="margin:0; font-size: 20px; letter-spacing: 2px; color: var(--accent);">MIR4 BOSS TRACKER</h1>
+        <h1 style="margin:0; font-size: 20px; letter-spacing: 2px; color: #ff9800;">MIR4 BOSS TRACKER</h1>
     </header>
 
     <div class="controls-area">
@@ -168,7 +148,7 @@
 
         <aside class="side-panel">
             <div class="panel-header">
-                <h2 id="p-name" style="margin:0; color:var(--accent); font-size: 17px;">Selecione um Boss</h2>
+                <h2 id="p-name" style="margin:0; color:#ff9800; font-size: 17px;">Selecione um Boss</h2>
                 <p id="p-loc" style="font-size:11px; color:#888; margin: 8px 0 0 0; line-height: 1.4;"></p>
             </div>
             <div class="map-container" id="p-map">
@@ -295,27 +275,7 @@
             }
         }
 
-        function toggleTheme() {
-            const body = document.body;
-            const btn = document.getElementById('themeBtn');
-            body.classList.toggle('light-mode');
-            const isLight = body.classList.contains('light-mode');
-            btn.innerText = isLight ? "MODO ESCURO" : "MODO CLARO";
-            localStorage.setItem('mir4_theme', isLight ? 'light' : 'dark');
-        }
-
-        function loadTheme() {
-            const savedTheme = localStorage.getItem('mir4_theme');
-            if (savedTheme === 'light') {
-                document.body.classList.add('light-mode');
-                document.getElementById('themeBtn').innerText = "MODO ESCURO";
-            }
-        }
-
-        window.onload = function() {
-            render();
-            loadTheme();
-        };
+        window.onload = render;
     </script>
 </body>
 </html>
