--- a/Summonboss.html
+++ b/Summonboss.html
@@ -14,7 +14,10 @@
             color: #ddd;
             font-family: Arial, sans-serif;
             margin: 0;
-            padding-bottom: 80px;
+            padding-bottom: 60px; /* Espaço para o rodapé fixo */
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .main-header {
@@ -46,13 +49,12 @@
         }
         .f-btn.active { background: #ff9800; color: #000; }
 
-        /* Estilo do botão reset mantido, mas posicionado no container de filtros */
         .btn-reset { 
             background: #900; color: #fff; border: none; padding: 5px 12px; 
             border-radius: 3px; cursor: pointer; font-size: 10px; margin-left: 5px;
         }
 
-        .main-content { display: flex; flex-direction: row; justify-content: center; gap: 20px; padding: 20px; flex-wrap: wrap; }
+        .main-content { display: flex; flex-direction: row; justify-content: center; gap: 20px; padding: 20px; flex-wrap: wrap; flex: 1; }
 
         .boss-list {
             display: grid;
@@ -103,9 +105,19 @@
         .map-container img { width: 100%; display: block; }
 
         .footer {
-            position: fixed; bottom: 0; width: 100%; padding: 12px;
-            background: #111; border-top: 1px solid #222;
-            text-align: center; font-size: 11px; z-index: 1000; color: #666;
+            position: fixed; 
+            bottom: 0; 
+            left: 0;
+            width: 100%; 
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #111; 
+            border-top: 1px solid #222;
+            font-size: 11px; 
+            z-index: 1000; 
+            color: #666;
         }
     </style>
 </head>
@@ -140,15 +152,12 @@
 
     <main class="main-content">
         <div class="boss-list" id="lb"></div>
-
         <aside class="side-panel">
             <div class="panel-header">
                 <h2 id="p-name" style="margin:0; color:#ff9800; font-size: 17px;">Selecione um Boss</h2>
                 <p id="p-loc" style="font-size:11px; color:#888; margin: 8px 0 0 0; line-height: 1.4;"></p>
             </div>
-            <div class="map-container" id="p-map">
-                <p style="color:#333;">O mapa será exibido aqui.</p>
-            </div>
+            <div class="map-container" id="p-map"><p style="color:#333;">O mapa será exibido aqui.</p></div>
         </aside>
     </main>
 
@@ -165,8 +174,8 @@
             {id:'b5', n:'5. Rei dos touros malvados', m:'c3m2', npc:'Seocheon', loc:'Campo de Seocheon', items:['item_porco_martelo.webp'], img:'m2_touro.webp'},
             {id:'b6', n:'6. Urungka', m:'c3m3', npc:'Hyeokjun', loc:'Necropole nefariox', items:['item_casco_tatu.webp'], img:'m3_tatu.webp'},
             {id:'b7', n:'7. Kaya', m:'c3m3', npc:'Hyeokjun', loc:'Planicie da viboras', items:['item_ornamento_soldado.webp'], img:'m3_planicia_kaya.webp'},
-            {id:'b8', n:'8. Covil do Tatu sombrio', m:'c3m3', npc:'Hyeokjun', loc:'Covil do tatu sombrio', items:['item_flor_roma_rara.webp'], img:'m3_covil_tatu.webp'},
-            {id:'b9', n:'9. Espectro do Osso de Aço', m:'c3m3', npc:'Hyeokjun', loc:'Espectro do Osso', items:['item_flor_roma_rara.webp'], img:'m3_espectro.webp'},
+            {id:'b8', n:'8. Covil do Tatu sombrio', m:'c3m3', npc:'Hyeokjun', loc:'Covil do tatu sombrio', items:['item_flor_morta.webp'], img:'m3_covil_tatu.webp'},
+            {id:'b9', n:'9. Espectro do Osso de Aço', m:'c3m3', npc:'Hyeokjun', loc:'Espectro do Osso', items:['item_flor_morta.webp'], img:'m3_espectro.webp'},
             {id:'b10', n:'10. Majestoso Nefariox', m:'c3m4', npc:'Dangpo', loc:'Sabuk', items:['item_valor_saqueado.webp'], img:'m4_sabuk_tesouro_dourado.webp'},
             {id:'b11', n:'11. Santidade Sonido Trovejante', m:'c3m4', npc:'Dangpo', loc:'Paraíso das Espadas', items:['item_pedra_trovao.webp'], img:'m4_paraiso_trovejante_nefariox.webp'},
             {id:'b12', n:'12. Santidade Draco Divina', m:'c3m4', npc:'Karungka', loc:'Paraíso das Espadas', items:['item_sangue_nefariox.webp'], img:'m4_paraiso_sangue_contaminado.webp'},
@@ -178,7 +187,7 @@
             {id:'b18', n:'18. Hangga', m:'c3m6', npc:'Gyeongbin', loc:'Labirinto hangga', items:['item_lingote.webp'], img:'m6_hangga.webp'},
             {id:'b19', n:'19. Jo Gyu', m:'c3m6', npc:'Gyeongbin', loc:'Jo Gyu', items:['item_grande_centopeia.webp'], img:'m6_jogyu.webp'},
             {id:'b20', n:'20. Demonio da Mina', m:'c3m6', npc:'Gyeongbin', loc:'Mina Demoníaca', items:['item_cristal_mana.webp'], img:'m6_mina.webp'},
-            {id:'b21', n:'21. Grande Centopeia', m:'c3m6', npc:'Gyeongbin', loc:'Grande Centopeia', items:['item_flor_roma_rara.webp'], img:'m6_centopeia.webp'},
+            {id:'b21', n:'21. Grande Centopeia', m:'c3m6', npc:'Gyeongbin', loc:'Grande Centopeia', items:['item_flor_morta.webp'], img:'m6_centopeia.webp'},
             {id:'b22', n:'22. Lobo fantasmagorico', m:'c3m7', npc:'Braço Direito', loc:'Lunula', items:['item_lobo_lunula_1.webp'], img:'m7_lunula_lobo_fantasma.webp'},
             {id:'b23', n:'23. Poderoso demonio', m:'c3m7', npc:'Braço Direito', loc:'Lunula', items:['item_berrante_lunula.webp'], img:'m7_lunula_demonio_de_sangue.webp'},
             {id:'b24', n:'24. Prisão subterranea', m:'c3m7', npc:'Buman', loc:'Prisão', items:['item_tartaruga_negra.webp'], img:'m7_prisao.webp'},
@@ -201,14 +210,9 @@
                         <div class="check-done" onclick="toggleDone(event, '${b.id}')"></div>
                         <div class="boss-header">
                             <img src="img/bosses/${b.img}" class="boss-img">
-                            <div>
-                                <span class="boss-name">${b.n}</span>
-                                <span class="local-info">${b.loc}</span>
-                            </div>
+                            <div><span class="boss-name">${b.n}</span><span class="local-info">${b.loc}</span></div>
                         </div>
-                        <div class="items-container">
-                            ${b.items.map(i => `<img src="img/craft/${i}" class="item-img">`).join('')}
-                        </div>
+                        <div class="items-container">${b.items.map(i => `<img src="img/craft/${i}" class="item-img">`).join('')}</div>
                     </div>
                 </div>
             `).join('');
