--- a/Summonboss.html
+++ b/Summonboss.html
@@ -24,7 +24,7 @@
         .main-header { background: #111; padding: 20px; text-align: center; border-bottom: 2px solid #ff9800; }
 
         .controls-area {
-            background: #111; padding: 15px; display: flex; flex-direction: column; align-items: center; gap: 10px;
+            background: #111; padding: 15px; display: flex; flex-direction: column; align-items: center; gap: 8px;
             position: sticky; top: 0; z-index: 100; border-bottom: 1px solid #222;
         }
 
@@ -37,19 +37,18 @@
         .btn-active { background: #ff9800; color: #000; }
         .btn-inactive { background: #222; color: #888; }
 
-        /* AJUSTE DOS BOTÕES PARA FICAREM PEQUENOS E EM LINHAS */
+        /* AJUSTE ESTILO WIDGET - DUAS LINHAS COMPACTAS */
         .filter-container { 
-            display: flex; 
-            flex-wrap: wrap; 
+            display: grid;
+            grid-template-columns: repeat(6, auto); /* Organiza em colunas automáticas */
             gap: 4px; 
-            width: 100%; 
-            max-width: 480px; 
             justify-content: center;
+            width: 100%;
+            max-width: 380px; /* Limita a largura para forçar a segunda linha como no widget */
         }
 
         .f-btn, .reset-btn { 
-            flex: 0 1 auto; /* Impede que o botão estique */
-            padding: 5px 8px; 
+            padding: 4px 6px; 
             background: #000; 
             border: 1px solid #333; 
             color: #fff; 
@@ -62,7 +61,7 @@
             white-space: nowrap;
         }
         .f-btn.active { border-color: #ff9800; color: #ff9800; }
-        .reset-btn { border-color: #4a1a1a; color: #ff4444; }
+        .reset-btn { border-color: #4a1a1a; color: #ff4444; grid-column: span 1; }
 
         .scroll { flex: 1; width: 100%; max-width: 700px; margin: 0 auto; padding: 20px; }
 
