--- a/Summonboss.html
+++ b/Summonboss.html
@@ -264,7 +264,7 @@
     </div>
 </div>
 
-<footer class="footer">MKguren - MIR4 Tracker</footer>
+<footer class="footer">MIR4 Tracker - desenvolvido por um fã para a comunidade de mir4.</footer>
 
 <script>
     window.onload = function() {
