--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <div class="scroll" id="lb"></div>
 
 <footer class="footer">
-    MKguren - desenvolvido por um fã para a comunidade de mir4.
+    MIR4 Tracker - desenvolvido por um fã para a comunidade de mir4.
 </footer>
 
 <script>
